--- a/SOFTWARE ENGINEERING/MyStudentMgmtApp/src/main/resources/application.properties
+++ b/SOFTWARE ENGINEERING/MyStudentMgmtApp/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.datasource.password = 123456
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.hbm2ddl.auto: update
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
