--- a/SOFTWARE ENGINEERING/eRegistrar/pom.xml
+++ b/SOFTWARE ENGINEERING/eRegistrar/pom.xml
@@ -42,6 +42,12 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
